--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
